--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "trade-stat-engine"
 version = "0.1.0"
 description = ""
+package-mode = false
 authors = [
     {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
 ]
@@ -11,7 +12,8 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.10,<0.116.0)",
     "python-decouple (>=3.8,<4.0)",
-    "numpy (>=2.2.3,<3.0.0)"
+    "numpy (>=2.2.3,<3.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
@@ -24,5 +26,4 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 black = "^25.1.0"
 ruff = "^0.9.9"
-pylama = "^8.4.1"
 
