--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "trade-stat-engine"
 version = "0.1.0"
 description = ""
-package-mode = false
+package-mode = true
 authors = [
     {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
 ]
@@ -13,7 +13,9 @@ dependencies = [
     "fastapi (>=0.115.10,<0.116.0)",
     "python-decouple (>=3.8,<4.0)",
     "numpy (>=2.2.3,<3.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "asyncio (>=3.4.3,<4.0.0)",
+    "asgiref (>=3.8.1,<4.0.0)"
 ]
 
 
