--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "numpy (>=2.2.3,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "asyncio (>=3.4.3,<4.0.0)",
-    "asgiref (>=3.8.1,<4.0.0)"
+    "asgiref (>=3.8.1,<4.0.0)",
+    "uvicorn (>=0.34.0,<0.35.0)"
 ]
 
 
